@@ -5,6 +5,10 @@ History of changes to PHC (name of developer listed in brackets)::
 
     PloneHelpCenter 3.0dev
     
+    - setuphandlers.py wasn't protecting importVarious from running in
+      non-install contexts. Showed up as unable to find portal_registry
+      when creating a new plone site. [stevem]
+    
     - Added Upgrade profile to manage type transition. [stevem]
     
     - Updated all types to be derived from ATCT types, thus inheriting
